--- a/zlingchun-spring-mybatis/pom.xml
+++ b/zlingchun-spring-mybatis/pom.xml
@@ -2,6 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.zlingchun.parent</groupId>
         <artifactId>zlingchun-spring-boot</artifactId>
@@ -9,10 +10,10 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <groupId>com.zlingchun.jpa</groupId>
-    <artifactId>zlingchun-spring-jpa</artifactId>
+    <groupId>com.zlingchun</groupId>
+    <artifactId>zlingchun-spring-mybatis</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>zlingchun-spring-jpa</name>
+    <name>zlingchun-spring-mybatis</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
@@ -23,8 +24,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -46,7 +51,6 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
