--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <module>zlingchun-spring-jpa</module>
     <module>zlingchun-spring-mybatis</module>
     <module>zlingchun-spring-jdbc</module>
+      <module>jpa-hibernate</module>
   </modules>
 
   <properties>
@@ -32,6 +33,9 @@
     <druid-version>1.2.8</druid-version>
     <jasypt-version>3.0.3</jasypt-version>
     <hutool-version>5.7.22</hutool-version>
+    <hibernate-version>5.6.8.Final</hibernate-version>
+    <openjpa-version>3.2.0</openjpa-version>
+    <junit-version>4.11</junit-version>
   </properties>
 
   <dependencyManagement>
@@ -63,12 +67,31 @@
         <artifactId>hutool-crypto</artifactId>
         <version>${hutool-version}</version>
       </dependency>
-
-
+      <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-entitymanager</artifactId>
+        <version>${hibernate-version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.openjpa</groupId>
+        <artifactId>openjpa-all</artifactId>
+        <version>${openjpa-version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.openjpa</groupId>
+        <artifactId>openjpa-jdbc</artifactId>
+        <version>${openjpa-version}</version>
+      </dependency>
       <dependency>
         <groupId>org.mybatis.spring.boot</groupId>
         <artifactId>mybatis-spring-boot-starter</artifactId>
         <version>${mybatis-version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>${junit-version}</version>
       </dependency>
 
     </dependencies>
