--- a/zlingchun-spring-jpa/src/main/resources/application.yml
+++ b/zlingchun-spring-jpa/src/main/resources/application.yml
@@ -62,8 +62,8 @@ spring:
           enabled: true
           db-type: mysql
           config:
-            delete-allow: false
-            drop-table-allow: false
+#            delete-allow: false
+#            drop-table-allow: false
         # 日志监控，使用slf4j 进行日志输出
         slf4j:
           enabled: true
@@ -90,6 +90,15 @@ spring:
         login-password: 123
         allow: 127.0.0.1  # 允许访问的地址，如果allow没有配置或者为空，则允许所有访问
         deny:       # 拒绝访问的地址，deny优先于allow，如果在deny列表中，就算在allow列表中，也会被拒绝
+  jpa:
+    #控制台显示sql
+    show-sql: true
+    generate-ddl: true
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    hibernate:
+      #更新或者创建数据表结构
+      ddl-auto: update
   sql:
     init:
       schemaLocations:
