--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <module>zlingchun-spring-mybatis</module>
     <module>zlingchun-spring-jdbc</module>
       <module>jpa-hibernate</module>
+    <module>zlingchun-springdata</module>
   </modules>
 
   <properties>
@@ -35,7 +36,7 @@
     <hutool-version>5.7.22</hutool-version>
     <hibernate-version>5.6.8.Final</hibernate-version>
     <openjpa-version>3.2.0</openjpa-version>
-    <junit-version>4.11</junit-version>
+    <junit-version>4.12</junit-version>
   </properties>
 
   <dependencyManagement>
@@ -87,13 +88,21 @@
         <artifactId>mybatis-spring-boot-starter</artifactId>
         <version>${mybatis-version}</version>
       </dependency>
-
+      <dependency>
+        <groupId>com.querydsl</groupId>
+        <artifactId>querydsl-jpa</artifactId>
+        <version>${querydsl.version}</version>
+      </dependency>
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>${junit-version}</version>
       </dependency>
-
+      <dependency>
+        <groupId>com.querydsl</groupId>
+        <artifactId>querydsl-apt</artifactId>
+        <version>${querydsl.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 </project>
