--- a/zlingchun-springdata/zlingchun-springdata-jpa/pom.xml
+++ b/zlingchun-springdata/zlingchun-springdata-jpa/pom.xml
@@ -52,8 +52,15 @@
             <version>5.3.20</version>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.hamcrest</groupId>
+                    <artifactId>hamcrest-core</artifactId>
+                </exclusion>
+            </exclusions>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
