--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,8 @@
     <hibernate-version>5.6.8.Final</hibernate-version>
     <openjpa-version>3.2.0</openjpa-version>
     <cxytiandi-version>1.2.2.RELEASE</cxytiandi-version>
+    <easyexcel-version>3.0.5</easyexcel-version>
+    <fastjson-version>2.0.7</fastjson-version>
   </properties>
 
   <dependencyManagement>
@@ -51,6 +53,16 @@
         <groupId>com.alibaba</groupId>
         <artifactId>druid-spring-boot-starter</artifactId>
         <version>${druid-start-version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.alibaba</groupId>
+        <artifactId>easyexcel</artifactId>
+        <version>${easyexcel-version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.alibaba</groupId>
+        <artifactId>fastjson</artifactId>
+        <version>${fastjson-version}</version>
       </dependency>
       <!-- 数据库密码加密 -->
       <dependency>
