--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <mysql.version>5.1.38</mysql.version>
+<!--    <mysql.version>5.1.38</mysql.version>-->
     <mybatis-version>2.2.2</mybatis-version>
     <druid-start-version>1.2.6</druid-start-version>
     <druid-version>1.2.8</druid-version>
@@ -44,11 +44,11 @@
 
   <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
-        <version>${mysql.version}</version>
-      </dependency>
+<!--      <dependency>-->
+<!--        <groupId>mysql</groupId>-->
+<!--        <artifactId>mysql-connector-java</artifactId>-->
+<!--        <version>${mysql.version}</version>-->
+<!--      </dependency>-->
       <dependency>
         <groupId>com.alibaba</groupId>
         <artifactId>druid-spring-boot-starter</artifactId>
@@ -74,11 +74,6 @@
       <dependency>
         <groupId>cn.hutool</groupId>
         <artifactId>hutool-all</artifactId>
-        <version>${hutool-version}</version>
-      </dependency>
-      <dependency>
-        <groupId>cn.hutool</groupId>
-        <artifactId>hutool-crypto</artifactId>
         <version>${hutool-version}</version>
       </dependency>
       <dependency>
