--- a/pom.xml
+++ b/pom.xml
@@ -1,116 +1,129 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <packaging>pom</packaging>
-  <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.0</version>
-    <relativePath/> <!-- lookup parent from repository -->
-  </parent>
-  <groupId>com.zlingchun.parent</groupId>
-  <artifactId>zlingchun-spring-boot</artifactId>
-  <version>1.0-SNAPSHOT</version>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.7.0</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+    <groupId>com.zlingchun.parent</groupId>
+    <artifactId>zlingchun-spring-boot</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
-  <name>zlingchun-spring-boot</name>
+    <name>zlingchun-spring-boot</name>
 
-  <modules>
-    <module>zlingchun-spring-jpa</module>
-    <module>zlingchun-spring-mybatis</module>
-    <module>zlingchun-spring-jdbc</module>
-      <module>jpa-hibernate</module>
-    <module>zlingchun-springdata</module>
-      <module>zlingchun-spring-mail</module>
-  </modules>
+    <modules>
+        <module>zlingchun-spring-jpa</module>
+        <module>zlingchun-spring-mybatis</module>
+        <module>zlingchun-spring-jdbc</module>
+        <module>jpa-hibernate</module>
+        <module>zlingchun-springdata</module>
+        <module>zlingchun-spring-mail</module>
+    </modules>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-<!--    <mysql.version>5.1.38</mysql.version>-->
-    <mybatis-version>2.2.2</mybatis-version>
-    <druid-start-version>1.2.6</druid-start-version>
-    <druid-version>1.2.8</druid-version>
-    <jasypt-version>3.0.3</jasypt-version>
-    <hutool-version>5.7.22</hutool-version>
-    <hibernate-version>5.6.8.Final</hibernate-version>
-    <openjpa-version>3.2.0</openjpa-version>
-    <cxytiandi-version>1.2.2.RELEASE</cxytiandi-version>
-    <easyexcel-version>3.0.5</easyexcel-version>
-    <fastjson-version>2.0.7</fastjson-version>
-  </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <!--    <mysql.version>5.1.38</mysql.version>-->
+        <mybatis-version>2.2.2</mybatis-version>
+        <druid-start-version>1.2.6</druid-start-version>
+        <druid-version>1.2.8</druid-version>
+        <jasypt-version>3.0.3</jasypt-version>
+        <hutool-version>5.7.22</hutool-version>
+        <hibernate-version>5.6.8.Final</hibernate-version>
+        <openjpa-version>3.2.0</openjpa-version>
+        <cxytiandi-version>1.2.2.RELEASE</cxytiandi-version>
+        <easyexcel-version>3.0.5</easyexcel-version>
+        <fastjson-version>2.0.7</fastjson-version>
+        <pagehelper-version>1.3.0</pagehelper-version>
+    </properties>
 
-  <dependencyManagement>
-    <dependencies>
-<!--      <dependency>-->
-<!--        <groupId>mysql</groupId>-->
-<!--        <artifactId>mysql-connector-java</artifactId>-->
-<!--        <version>${mysql.version}</version>-->
-<!--      </dependency>-->
-      <dependency>
-        <groupId>com.alibaba</groupId>
-        <artifactId>druid-spring-boot-starter</artifactId>
-        <version>${druid-start-version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.alibaba</groupId>
-        <artifactId>easyexcel</artifactId>
-        <version>${easyexcel-version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.alibaba</groupId>
-        <artifactId>fastjson</artifactId>
-        <version>${fastjson-version}</version>
-      </dependency>
-      <!-- 数据库密码加密 -->
-      <dependency>
-          <groupId>com.github.ulisesbocchio</groupId>
-          <artifactId>jasypt-spring-boot-starter</artifactId>
-          <version>${jasypt-version}</version>
-      </dependency>
-      <!-- 自定义数据库密码加密工具辅助包 -->
-      <dependency>
-        <groupId>cn.hutool</groupId>
-        <artifactId>hutool-all</artifactId>
-        <version>${hutool-version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-entitymanager</artifactId>
-        <version>${hibernate-version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.openjpa</groupId>
-        <artifactId>openjpa-all</artifactId>
-        <version>${openjpa-version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.openjpa</groupId>
-        <artifactId>openjpa-jdbc</artifactId>
-        <version>${openjpa-version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.mybatis.spring.boot</groupId>
-        <artifactId>mybatis-spring-boot-starter</artifactId>
-        <version>${mybatis-version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.querydsl</groupId>
-        <artifactId>querydsl-jpa</artifactId>
-        <version>${querydsl.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.querydsl</groupId>
-        <artifactId>querydsl-apt</artifactId>
-        <version>${querydsl.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.cxytiandi</groupId>
-        <artifactId>monkey-api-encrypt-core</artifactId>
-        <version>${cxytiandi-version}</version>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
+    <dependencyManagement>
+        <dependencies>
+            <!--      <dependency>-->
+            <!--        <groupId>mysql</groupId>-->
+            <!--        <artifactId>mysql-connector-java</artifactId>-->
+            <!--        <version>${mysql.version}</version>-->
+            <!--      </dependency>-->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid-spring-boot-starter</artifactId>
+                <version>${druid-start-version}</version>
+            </dependency>
+            <!-- 分页插件 -->
+            <dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper-spring-boot-starter</artifactId>
+                <version>${pagehelper-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>easyexcel</artifactId>
+                <version>${easyexcel-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson-version}</version>
+            </dependency>
+            <!-- 数据库密码加密 -->
+            <dependency>
+                <groupId>com.github.ulisesbocchio</groupId>
+                <artifactId>jasypt-spring-boot-starter</artifactId>
+                <version>${jasypt-version}</version>
+            </dependency>
+            <!-- 自定义数据库密码加密工具辅助包 -->
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-entitymanager</artifactId>
+                <version>${hibernate-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.openjpa</groupId>
+                <artifactId>openjpa-all</artifactId>
+                <version>${openjpa-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.openjpa</groupId>
+                <artifactId>openjpa-jdbc</artifactId>
+                <version>${openjpa-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis-version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>com.querydsl</groupId>
+                <artifactId>querydsl-jpa</artifactId>
+                <version>${querydsl.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.querydsl</groupId>
+                <artifactId>querydsl-apt</artifactId>
+                <version>${querydsl.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.cxytiandi</groupId>
+                <artifactId>monkey-api-encrypt-core</artifactId>
+                <version>${cxytiandi-version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
