--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <easyexcel-version>3.0.5</easyexcel-version>
         <fastjson-version>2.0.7</fastjson-version>
         <pagehelper-version>1.3.0</pagehelper-version>
+        <mybatis-dynamic-version>1.3.0</mybatis-dynamic-version>
     </properties>
 
     <dependencyManagement>
@@ -54,6 +55,12 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid-spring-boot-starter</artifactId>
                 <version>${druid-start-version}</version>
+            </dependency>
+            <!-- 动态sql -->
+            <dependency>
+                <groupId>org.mybatis.dynamic-sql</groupId>
+                <artifactId>mybatis-dynamic-sql</artifactId>
+                <version>${mybatis-dynamic-version}</version>
             </dependency>
             <!-- 分页插件 -->
             <dependency>
