--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,9 @@
         <fastjson-version>2.0.7</fastjson-version>
         <pagehelper-version>1.3.0</pagehelper-version>
         <mybatis-dynamic-version>1.3.0</mybatis-dynamic-version>
+        <mapstruct-version>1.4.2.Final</mapstruct-version>
+        <lombok-mapstruct-binding-version>0.2.0</lombok-mapstruct-binding-version>
+        <guava-version>31.1-jre</guava-version>
     </properties>
 
     <dependencyManagement>
@@ -131,6 +134,46 @@
                 <artifactId>monkey-api-encrypt-core</artifactId>
                 <version>${cxytiandi-version}</version>
             </dependency>
+            <!--mapstruct核心-->
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct</artifactId>
+                <version>${mapstruct-version}</version>
+            </dependency>
+            <!--mapstruct编译-->
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct-processor</artifactId>
+                <version>${mapstruct-version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava-version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
+    <repositories>
+        <repository>
+            <id>central</id>
+            <name>aliyun maven</name>
+            <url>https://maven.aliyun.com/repository/public/</url>
+            <layout>default</layout>
+            <!-- 是否开启发布版构件下载 -->
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <!-- 是否开启快照版构件下载 -->
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>repo2</id>
+            <name>Human Readable Name for this Mirror.</name>
+            <url>http://repo2.maven.org/maven2/</url>
+        </repository>
+    </repositories>
 </project>
