--- a/zlingchun-spring-mybatis/src/main/resources/application.yml
+++ b/zlingchun-spring-mybatis/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
   profiles:
     active: dev
   main:
+      # 解决升级 Spring Boot 2.6后，因循环引用导致启动时报错的问题
       allow-circular-references: true
   # 初始化脚本配置
   sql:
