--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>jpa-hibernate</module>
         <module>zlingchun-springdata</module>
         <module>zlingchun-spring-mail</module>
+        <module>zlingchun-spring-mybatisplus</module>
     </modules>
 
     <properties>
@@ -40,12 +41,14 @@
         <cxytiandi-version>1.2.2.RELEASE</cxytiandi-version>
         <easyexcel-version>3.0.5</easyexcel-version>
         <fastjson-version>2.0.7</fastjson-version>
+        <fastjson2-version>2.0.7</fastjson2-version>
         <pagehelper-version>1.3.0</pagehelper-version>
         <mybatis-dynamic-version>1.3.0</mybatis-dynamic-version>
         <mapstruct-version>1.4.2.Final</mapstruct-version>
         <lombok-mapstruct-binding-version>0.2.0</lombok-mapstruct-binding-version>
         <guava-version>31.1-jre</guava-version>
         <pinyin4j-version>2.5.1</pinyin4j-version>
+        <mybatis-plus-version>3.5.1</mybatis-plus-version>
     </properties>
 
     <dependencyManagement>
@@ -55,10 +58,28 @@
             <!--        <artifactId>mysql-connector-java</artifactId>-->
             <!--        <version>${mysql.version}</version>-->
             <!--      </dependency>-->
+            <!--mybatis-plus-->
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis-plus-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-generator</artifactId>
+                <version>${mybatis-plus-version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid-spring-boot-starter</artifactId>
                 <version>${druid-start-version}</version>
+                <exclusions>
+                    <!-- 排除默认的 HikariCP 数据源 -->
+                    <exclusion>
+                        <groupId>com.zaxxer</groupId>
+                        <artifactId>HikariCP</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <!-- 动态sql -->
             <dependency>
@@ -81,6 +102,11 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
                 <version>${fastjson-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.fastjson2</groupId>
+                <artifactId>fastjson2</artifactId>
+                <version>${fastjson2-version}</version>
             </dependency>
             <!-- 数据库密码加密 -->
             <dependency>
