--- a/zlingchun-spring-mybatisplus/src/main/resources/application-dev.yml
+++ b/zlingchun-spring-mybatisplus/src/main/resources/application-dev.yml
@@ -122,11 +122,13 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   mapper-locations:
     - classpath*:/mapper/**/*.xml
+  type-aliases-package: com.zlingchun.mybatisplus.doman.pojo
   # 设置mybatis-plus全局配置
   global-config:
+    banner: false
     db-config:
       # 这样配置之后实体类不需要再使用@TableName，但是所有的表都会对应以t_类名 开头的表
       table-prefix: t_
-#      logic-delete-field: status # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
-#      logic-delete-value: 1 # 逻辑已删除值(默认为 1)
-#      logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
+  #      logic-delete-field: status # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
+  #      logic-delete-value: 1 # 逻辑已删除值(默认为 1)
+  #      logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
