结合JWT验证用户登录，Redis缓存

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,8 @@
         <mybatis-plus-version>3.5.1</mybatis-plus-version>
         <springfox-version>3.0.0</springfox-version>
         <swager-model-version>1.5.22</swager-model-version>
+        <java-jwt-version>3.10.0</java-jwt-version>
+        <jjwt-version>0.11.2</jjwt-version>
     </properties>
 
     <dependencyManagement>
@@ -212,6 +214,29 @@
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger-ui</artifactId>
                 <version>${springfox-version}</version>
+            </dependency>
+            <!-- java-jwt -->
+            <dependency>
+                <groupId>com.auth0</groupId>
+                <artifactId>java-jwt</artifactId>
+                <version>${java-jwt-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-api</artifactId>
+                <version>${jjwt-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-impl</artifactId>
+                <version>${jjwt-version}</version>
+                <scope>runtime</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson if Gson is preferred -->
+                <version>${jjwt-version}</version>
+                <scope>runtime</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
