--- a/zlingchun-spring-mybatisplus/src/main/resources/application-dev.yml
+++ b/zlingchun-spring-mybatisplus/src/main/resources/application-dev.yml
@@ -21,6 +21,31 @@ spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
+
+  # redis 配置
+  redis:
+    host: 192.168.178.25
+    port: 6379
+    password: 12345678
+    # 连接超时时间（毫秒）
+    timeout: 5000
+    # Redis默认情况下有16个分片，这里配置具体使用的分片，默认是0
+    database: 0
+    # 连接池最大连接数（使用负值表示没有限制） 默认 8
+    lettuce:
+      pool:
+        max-active: 8
+        # 连接池最大阻塞等待时间（使用负值表示没有限制） 默认 -1
+        max-wait: -1
+        # 连接池中的最大空闲连接 默认 8
+        max-idle: 8
+        # 连接池中的最小空闲连接 默认 0
+        min-idle: 0
+  #缓存配置
+  # 一般来说是不用配置的，Spring Cache 会根据依赖的包自行装配 先后顺序 JCache -> EhCache -> Redis -> Guava
+  cache:
+    type: redis
+
   # 数据源配置
   datasource:
     ### JDBC 基本配置 ###
@@ -114,13 +139,7 @@ jasypt:
     algorithm: PBEWithMD5AndDES
     iv-generator-classname: org.jasypt.iv.NoIvGenerator
 
-# 雪花算法配置
-custom:
-  snowflake:
-    machine-id: 1
-    data-center-id: 1
-  swagger:
-    enable: true
+# mybatis-plus 配置
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
@@ -136,3 +155,11 @@ mybatis-plus:
       logic-delete-field: status # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
       logic-delete-value: 1 # 逻辑已删除值(默认为 1)
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
+
+# 雪花算法配置
+custom:
+  snowflake:
+    machine-id: 1
+    data-center-id: 1
+  swagger:
+    enable: true
